# purejaxql

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml
docker/: Dockerfile  atari.Dockerfile  build.sh  build_atari.sh  run.sh  run_atari.sh
purejaxql/: craftax_wrappers.py  ppo_minatar.py  pqn_atari.py  pqn_brax.py  pqn_craftax.py  pqn_gymnax.py  pqn_gymnax_flat.py  pqn_minatar.py  pqn_mujoco_playground.py  pqn_rnn_craftax.py  pqn_rnn_gymnax.py  pqn_rnn_gymnax_flat.py  pqn_vdn_rnn_jaxmarl.py
purejaxql/config/: config.yaml
purejaxql/config/alg/: ppo_minatar.yaml  pqn_atari.yaml  pqn_brax.yaml  pqn_cartpole.yaml  pqn_craftax.yaml  pqn_minatar.yaml  pqn_playground_dm_suite.yaml  pqn_playground_locomotion.yaml  pqn_playground_manipulation.yaml  pqn_rnn_cartpole.yaml  pqn_rnn_craftax.yaml  pqn_rnn_memory_chain.yaml  pqn_vdn_rnn_smax.yaml
purejaxql/simplified/: README.md  pqn_atari_simple.py  pqn_gymnax_simple.py  pqn_minatar_simple.py  pqn_mujoco_playground_simple.py
purejaxql/utils/: atari_wrapper.py  batch_renorm.py  brax_wrappers.py  craftax_wrappers.py  save_load.py
requirements/: requirements.txt  requirements_atari.txt
scripts/: README.md  mujoco_playground_render.py  train_playground_all.sh
tests/: conftest.py  test_pqn_gymnax_flat.py  test_pqn_rnn_gymnax_flat.py
