[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["purejaxql*"]

[project]
name = "purejaxql"
version = "0.0.1"
description = "Simple jax-based baselines for Q-Learning in pure-GPU setting."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "jax>=0.4.16.0",
    "jaxlib>=0.4.16.0",
    "flax==0.7.4",
    "chex==0.1.84",
    "optax==0.1.7",
    "safetensors==0.4.2",
    "wandb",
    "pytest",
    "pygame",
    "seaborn",
    "numpy>=1.26.1",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "matplotlib>=3.8.3",
    "pillow>=10.2.0",
    "pettingzoo>=1.24.3",
    "tqdm>=4.66.0",
    "scipy<=1.12",
]


[project.optional-dependencies]

jax_envs = [
    "craftax>=1.4.2",
    "jaxmarl==0.0.5",
    "gymnax==0.0.6"
]

atari = [
    "gym==0.23.1",
    "envpool==0.8.4",
    "gymnax==0.0.5"
]